# wzu-scraper

./: .gitignore  README.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: technical-analysis.md
scripts/: audit_fixtures.py
tests/: conftest.py  test_auth.py  test_client.py  test_cms.py  test_cms_parsers.py  test_crypto.py  test_exporters.py  test_jwxt_api.py  test_main_helpers.py  test_notifier.py  test_tui.py  test_webvpn.py  test_xk.py
tests/fixtures/auth/: login_page.html
tests/fixtures/cms/: article_content.html  style_a.html  style_b.html  style_c.html  style_d.html  style_e.html  style_f.html  style_g.html  style_jsp.html
tests/fixtures/jwxt/: exams.json  grades.json  schedule.json  selected_courses.html  student_info.html
wzu_scraper/: auth.py  client.py  cms.py  cms_parsers.py  crypto.py  exporters.py  jwc.py  jwxt_api.py  notifier.py  tui.py  webvpn.py  xk.py
